# space-chat

./: .gitattributes  .gitignore  Cargo.toml  README.md  package.json  tailwind.config.js
src/: assets.rs  chatroom.rs  errors.rs  lib.rs  main.rs
src/openai/: chat_completion.rs  mod.rs
templates/: base.html  chat.html  error.html
templates/chat/: message.html  thinking.html
